--- a/PinShoot/PinShoot.csproj
+++ b/PinShoot/PinShoot.csproj
@@ -58,6 +58,18 @@
     <Compile Include="EventList.Designer.cs">
       <DependentUpon>EventList.cs</DependentUpon>
     </Compile>
+    <Compile Include="FivePinResults.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FivePinResults.Designer.cs">
+      <DependentUpon>FivePinResults.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FivePinTimeEntry.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FivePinTimeEntry.Designer.cs">
+      <DependentUpon>FivePinTimeEntry.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +90,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Team.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Team.Designer.cs">
+      <DependentUpon>Team.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeamList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeamList.Designer.cs">
+      <DependentUpon>TeamList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Types.cs" />
     <Compile Include="Utilities.cs" />
     <EmbeddedResource Include="Event.resx">
@@ -85,6 +109,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EventList.resx">
       <DependentUpon>EventList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FivePinResults.resx">
+      <DependentUpon>FivePinResults.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FivePinTimeEntry.resx">
+      <DependentUpon>FivePinTimeEntry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -104,6 +134,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Team.resx">
+      <DependentUpon>Team.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeamList.resx">
+      <DependentUpon>TeamList.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
